# document-jiguang

./: .env.example  .gitignore  AGENTS.md  AI_Vibecoding_文章审核与再次生成指导建议.docx  CLAUDE.md  GEMINI.md  README.md  gstack_publish_ready_final_clean.md  log.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.obsidian/: app.json  graph.json
04_Templates/: T-PRD-交付需求.md  T-SKILL.md  T-Skill候选卡.md  T-业务闭环设计.md  T-主题笔记.md  T-分享文章.md  T-反AI味检查清单.md  T-发布建议.md  T-来源笔记-PDF.md  T-来源笔记-文档.md  T-来源笔记-文章.md  T-来源笔记-视频.md  T-来源笔记-链接.md
05_Workflows/: PRD到测试闭环流程.md  Skill开发流程.md  业务闭环设计流程.md  内容处理工作流.md  文章发布包装流程.md  文章配图与图卡流程.md
06_Maps/: AI知识库总览.md  index.md  mentions.md  taxonomy.md
07_Attachments/: 2026-03-23_openspec-practical-architecture.data.json
99_System/: Markdown发布预览说明.md  Obsidian使用建议.md  PRD到测试闭环系统说明.md  SVG资产生成与校验说明.md  Satori视觉资产说明.md  Skill候选池.md  Skill孵化-source-auto-summary.md  Skill集成说明.md  llm-wiki约定.md  userstory.md  业务闭环面板说明.md  内容业务闭环设计示例.md  命名与标签约定.md  自动入库说明.md
business_loop/: __init__.py  cli.py  dashboard.py  engine.py  executor.py  models.py  prd.py  providers.py  search.py  storage.py  workspace.py
outputs/: README.md
raw/: README.md
references/: ai_workflow_article_outline_template_v4.md
scripts/: check_svg_layout.js  intake_source.py  render_satori_visual.js  render_svg_png.js  render_svg_png_chrome.js  restart_markdown_publish_preview.js  restart_markdown_publish_preview.sh  serve_markdown_publish_preview.js  start_business_loop_panel.sh  validate_svg_asset.sh
tests/: test_dashboard.py  test_engine.py  (+2 more)
(+268 files in other folders)
