[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "business-loop-engine"
version = "0.1.0"
description = "A Python workflow engine for PRD-to-test closed-loop delivery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["business_loop"]
